; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/tests/nptest/extr_npserver.c_InstanceThread.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/tests/nptest/extr_npserver.c_InstanceThread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BUFSIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @InstanceThread(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %12 = load i32, i32* @BUFSIZE, align 4
  %13 = zext i32 %12 to i64
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %4, align 8
  %15 = alloca i32, i64 %13, align 16
  store i64 %13, i64* %5, align 8
  %16 = load i32, i32* @BUFSIZE, align 4
  %17 = zext i32 %16 to i64
  %18 = alloca i32, i64 %17, align 16
  store i64 %17, i64* %6, align 8
  %19 = load i64, i64* %3, align 8
  store i64 %19, i64* %11, align 8
  br label %20

20:                                               ; preds = %43, %1
  br label %21

21:                                               ; preds = %20
  %22 = load i64, i64* %11, align 8
  %23 = load i32, i32* @BUFSIZE, align 4
  %24 = call i64 @ReadFile(i64 %22, i32* %15, i32 %23, i64* %7, i32* null)
  store i64 %24, i64* %10, align 8
  %25 = load i64, i64* %10, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %30

27:                                               ; preds = %21
  %28 = load i64, i64* %7, align 8
  %29 = icmp eq i64 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %27, %21
  br label %44

31:                                               ; preds = %27
  %32 = call i32 @GetAnswerToRequest(i32* %15, i32* %18, i64* %8)
  %33 = load i64, i64* %11, align 8
  %34 = load i64, i64* %8, align 8
  %35 = call i64 @WriteFile(i64 %33, i32* %18, i64 %34, i64* %9, i32* null)
  store i64 %35, i64* %10, align 8
  %36 = load i64, i64* %10, align 8
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %42

38:                                               ; preds = %31
  %39 = load i64, i64* %8, align 8
  %40 = load i64, i64* %9, align 8
  %41 = icmp ne i64 %39, %40
  br i1 %41, label %42, label %43

42:                                               ; preds = %38, %31
  br label %44

43:                                               ; preds = %38
  br label %20

44:                                               ; preds = %42, %30
  %45 = load i64, i64* %11, align 8
  %46 = call i32 @FlushFileBuffers(i64 %45)
  %47 = load i64, i64* %11, align 8
  %48 = call i32 @DisconnectNamedPipe(i64 %47)
  %49 = load i64, i64* %11, align 8
  %50 = call i32 @CloseHandle(i64 %49)
  %51 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %51)
  %52 = load i32, i32* %2, align 4
  ret i32 %52
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @ReadFile(i64, i32*, i32, i64*, i32*) #2

declare dso_local i32 @GetAnswerToRequest(i32*, i32*, i64*) #2

declare dso_local i64 @WriteFile(i64, i32*, i64, i64*, i32*) #2

declare dso_local i32 @FlushFileBuffers(i64) #2

declare dso_local i32 @DisconnectNamedPipe(i64) #2

declare dso_local i32 @CloseHandle(i64) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
